--- a/Modacity/Modacity/ViewController/PlayPractice/PracticeMusicQuoteCell.xib
+++ b/Modacity/Modacity/ViewController/PlayPractice/PracticeMusicQuoteCell.xib
@@ -32,17 +32,17 @@
                         <rect key="frame" x="60" y="20" width="349" height="54"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tcr-VE-wTr">
-                                <rect key="frame" x="0.0" y="2.5" width="349" height="49.5"/>
+                                <rect key="frame" x="0.0" y="-5.5" width="349" height="65.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mistakes are immensely useful. They show us where we are right now and what we need to do next." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="2EC-zg-tz3">
-                                        <rect key="frame" x="0.0" y="0.0" width="349" height="32.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="When I was a little boy, I told my dad, 'When I grow up, I want to be a musician.' My data said: 'You can't do both, Son." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="2EC-zg-tz3">
+                                        <rect key="frame" x="0.0" y="0.0" width="349" height="48.5"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" name="Helvetica-LightOblique" family="Helvetica" pointSize="14"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- William Westney" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZIW-R5-rgq">
-                                        <rect key="frame" x="0.0" y="37.5" width="79" height="12"/>
+                                        <rect key="frame" x="0.0" y="53.5" width="79" height="12"/>
                                         <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="10"/>
                                         <color key="textColor" red="0.10588235294117647" green="0.73725490196078436" blue="0.71372549019607845" alpha="0.69999999999999996" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
