--- a/Modacity/Modacity/ViewController/Playlist/playlist.storyboard
+++ b/Modacity/Modacity/ViewController/Playlist/playlist.storyboard
@@ -990,6 +990,7 @@ named to be saved.</string>
                     </view>
                     <navigationItem key="navigationItem" id="bBn-39-29U"/>
                     <connections>
+                        <outlet property="buttonNotes" destination="uTn-IJ-aKm" id="JoR-s0-re1"/>
                         <outlet property="labelDurationUnits" destination="uX1-gx-SfV" id="mFk-Hd-RVb"/>
                         <outlet property="labelPlaylistName" destination="2P2-vP-yD3" id="vFe-IH-Dcp"/>
                         <outlet property="labelSessionDuration" destination="u49-sg-GJC" id="Nhc-oX-jp1"/>
