--- a/Modacity/Modacity/ViewController/MetroDrone/metrodone.storyboard
+++ b/Modacity/Modacity/ViewController/MetroDrone/metrodone.storyboard
@@ -173,7 +173,7 @@
                                             <constraint firstAttribute="height" constant="12" id="zzp-Lf-zUu"/>
                                         </constraints>
                                     </imageView>
-                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.10000000000000001" maxValue="0.98999999999999999" continuous="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oe8-rC-QBR">
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.10000000000000001" maxValue="0.98999999999999999" translatesAutoresizingMaskIntoConstraints="NO" id="Oe8-rC-QBR">
                                         <rect key="frame" x="163.5" y="6" width="118.5" height="13"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="12" id="b58-Hp-VkT"/>
@@ -303,8 +303,8 @@
                                             <action selector="onTapTouchup:" destination="U5I-Ap-dmF" eventType="touchUpOutside" id="fsE-40-X0b"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="METRODRONE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hp2-Y5-8nZ">
-                                        <rect key="frame" x="0.0" y="11.5" width="71.5" height="12"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="METRONOME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hp2-Y5-8nZ">
+                                        <rect key="frame" x="0.0" y="11.5" width="67" height="12"/>
                                         <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="10"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="0.75" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -629,7 +629,7 @@
                                             <constraint firstAttribute="height" constant="12" id="jkN-SJ-PNd"/>
                                         </constraints>
                                     </imageView>
-                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.10000000149011612" maxValue="0.99000000953674316" continuous="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g8q-Ti-WT8">
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.10000000149011612" maxValue="0.99000000953674316" translatesAutoresizingMaskIntoConstraints="NO" id="g8q-Ti-WT8">
                                         <rect key="frame" x="163.5" y="6" width="118.5" height="13"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="12" id="gCS-aC-GzA"/>
@@ -760,8 +760,8 @@
                                             <action selector="onTapTouchup:" destination="vJt-GF-6rn" eventType="touchUpInside" id="uDO-J0-1lg"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="METRODRONE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bHI-7c-eZm">
-                                        <rect key="frame" x="0.0" y="6.5" width="71.5" height="12"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="METRONOME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bHI-7c-eZm">
+                                        <rect key="frame" x="0.0" y="6.5" width="67" height="12"/>
                                         <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="10"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="0.75" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
